Resolved text overflow and added responsiveness (#10)
* HTML Structure

* Web Solution Page intermediate

* Adding Utility Classes and Chips

Adding Utility Classes and Chips

* Design & Document Intermediate

* Media intermediate

* Resolve text overflow and made responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,6 @@ body {
   grid-template-columns: [col-start] 1fr [col-1] 1fr [col-end];
   grid-auto-rows: 1fr 1fr;
   gap: 2rem;
-  /* align-items: stretch; */
   grid-template-areas:
     "s1 s2"
     "s3 s4";
@@ -336,9 +335,9 @@ body {
   font-weight: 200;
 }
 
-/* App Development Start */
+/* Web Solutions Ends */
 
-/* App Development Ends */
+/* App Development Start */
 
 .app-container {
   width: 100vw;
@@ -400,14 +399,27 @@ body {
 
 /* App Development Ends */
 
-/* Web Solution End */
-
 /* Design and document start */
 
+.design-container{
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.design-services{
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+}
 
 .design-card{
-    width: 45em;
-    height: 28rem;
+    width: 100%;
+    height: 32rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -416,9 +428,16 @@ body {
 }
 
 .design-service-card-image{
-    width: 100%;
-    height: 60%;
+    flex: 1;
     overflow: hidden;
+    width: 100%;
+}
+
+.design-service-card-info{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 0.5rem;
+    /* flex: var(--step-2); */
 }
 
 .design-service-card-image> img{
@@ -427,23 +446,18 @@ body {
     object-fit: cover;
 }
 
-.design-service-card-info{
-    display: flex;
-    flex-direction: column;
-    padding: 1.25rem;
-    gap: 1rem;
-    height: 40%;
-    text-align: center;
-}
-
 .design-service-card-info>p{
     font-size: var(--step-0);
-    /* line-height: 2rem; */
+    font-weight: 400;
+    font-family: var(--ff-poppins);
 }
 
 .design-service-card-info>h4{
     font-size: var(--step--2);
-    /* line-height: 2rem; */
+    font-weight: 400;
+    font-family: var(--ff-poppins);
+    margin-top: 1rem;
+    line-height: 2rem;
 }
 
 /* Design and document end */
@@ -452,9 +466,6 @@ body {
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
     
-.design-card{
-    width: 16rem;
-}
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -520,10 +531,6 @@ body {
     flex: 1;
   }
 
-  
-.design-card{
-    width: 16rem;
-}
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -536,10 +543,9 @@ body {
   }
   
     /* Design and document */
-    
-.design-card{
-    width: 16rem;
-}
+  .design-services{
+    padding: 0rem 2rem;
+  }
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
@@ -569,10 +575,7 @@ body {
   .app-service-info > p {
     margin-top: 0.6rem;
   }
-  
-.design-card{
-    width: 16rem;
-}
+
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
